<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ChannelGuid" Id="{ea2deffb-30a5-4430-af51-c672f6532694}">
    <Declaration><![CDATA[TYPE ChannelGuid :
UNION
    GuidCombo : GuidCombo;
    GuidValue : DWORD;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>