<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="GuidCombo" Id="{f8535c7e-ff5b-478c-9572-63316f5ba38e}">
    <Declaration><![CDATA[TYPE GuidCombo :
STRUCT
    TerminalAddress : WORD;
    ChannelNumber : WORD;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>