<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{bbb8674d-7996-4211-9872-cb0b304073a4}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
    DICTIONARY_UPPER_BOUND : INT := 4;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>